@@ -23,7 +23,7 @@ public class GeneratorTest extends MidscribeTest {
     public void generateExample() throws Exception {
         GenerateOptions opts = prepareOptions("generateExample");
         opts.setSourceDirectory(List.of(new File("./src/test/resources/objects")));
-        opts.getExclude().addAll(Arrays.asList(new String[]{"users/*.xml", "tasks/misc/*"}));
+        opts.getExclude().addAll(Arrays.asList("users/*.xml", "tasks/misc/*"));
 
         Generator generator = new Generator(opts);
         generator.generate();
@@ -33,7 +33,7 @@ public class GeneratorTest extends MidscribeTest {
     public void generatePdfExample() throws Exception {
         GenerateOptions opts = prepareOptions("generatePdfExample");
         opts.setSourceDirectory(List.of(new File("./src/test/resources/objects")));
-        opts.getExclude().addAll(Arrays.asList(new String[]{"users/*.xml", "tasks/misc/*"}));
+        opts.getExclude().addAll(Arrays.asList("users/*.xml", "tasks/misc/*"));
         opts.setExportFormat(ExportFormat.PDF);
 
         Generator generator = new Generator(opts);
@@ -44,7 +44,7 @@ public class GeneratorTest extends MidscribeTest {
     public void generateWithCustomZipTemplate() throws Exception {
         GenerateOptions opts = prepareOptions("generateWithCustomZipTemplate");
         opts.setSourceDirectory(List.of(new File("./src/test/resources/objects")));
-        opts.getExclude().addAll(Arrays.asList(new String[]{"users/*.xml", "tasks/misc/*"}));
+        opts.getExclude().addAll(Arrays.asList("users/*.xml", "tasks/misc/*"));
         opts.setTemplate(new File("./src/test/resources/template.zip"));
 
         Generator generator = new Generator(opts);
@@ -54,7 +54,7 @@ public class GeneratorTest extends MidscribeTest {
     @Test
     public void generateWithCustomDirectoryTemplate() throws Exception {
         GenerateOptions opts = prepareOptions("generateWithCustomDirectoryTemplate");
-        opts.getExclude().addAll(Arrays.asList(new String[]{"users/*.xml", "tasks/misc/*"}));
+        opts.getExclude().addAll(Arrays.asList("users/*.xml", "tasks/misc/*"));
         opts.setTemplate(new File("./src/test/resources/template-directory"));
 
         Generator generator = new Generator(opts);
@@ -83,7 +83,7 @@ public class GeneratorTest extends MidscribeTest {
     public void generateHtmlWithCustomLogListener() throws Exception {
         GenerateOptions opts = prepareOptions("generateHtmlWithCustomLogListener");
         opts.setSourceDirectory(List.of(new File("./src/test/resources/objects")));
-        opts.setInclude(Arrays.asList("generateHtmlWithCustomLogListener.xml"));
+        opts.setInclude(List.of("generateHtmlWithCustomLogListener.xml"));
 
         List<String> messages = new ArrayList<>();
 
@@ -93,7 +93,7 @@ public class GeneratorTest extends MidscribeTest {
         generator.setLogListener(listener);
         generator.generate();
 
-        messages.forEach(m -> LOG.info(m));
+        messages.forEach(LOG::info);
 
         AssertJUnit.assertEquals(2, messages.size());
     }
